[metadata]
name = Hierarchical_reject
author = Lauren Theunissen
description = Code accompanying paper "Uncertainty-aware single-cell annotation with a hierarchical reject option"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Latheuni/Hierarchical_reject
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.9
install_requires = 
    numpy
    pandas
    scanpy
    anndata
    scikit-learn
    scipy
    h5py


